fixed menu bar size on mobile

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -24,6 +24,13 @@
     }
 
     ul{
+        @include mobile{
+            width: 50%;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
         margin:0;
         padding:0;
         list-style: none;
